--- a/nlp.html
+++ b/nlp.html
@@ -138,7 +138,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Richmond Ontario, Canada</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ancestry/1b453203-1298-4697-9d76-1b33e9b3cfd2'>Ancestry - Data Scientist (NLP)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/1b453203-1298-4697-9d76-1b33e9b3cfd2'>Ancestry - Data Scientist (NLP)</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -182,7 +182,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='http://wolframresearch.recruiterbox.com/jobs/fk0jhff'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://wolframresearch.recruiterbox.com/jobs/fk0jhff'>
     Software Developer?Natural Language Processing  at Wolfram
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -243,7 +243,7 @@ of the job details and apply today!</p>
 <p>4 days ago ... ... to deliver the right marketing message to the right audience at the right moment 
 and right place, underpinned by a multi-layered data-driven approach. Knorex?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1885683'>Job Application for Research Internship - Summer 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1885683'>Job Application for Research Internship - Summer 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
@@ -332,7 +332,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/cardinalhire/136e4a29-f597-40eb-b7eb-18b884392a09'>Stealth Startup - Natural Language Processing Engineer - up to $190,000</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cardinalhire/136e4a29-f597-40eb-b7eb-18b884392a09'>Stealth Startup - Natural Language Processing Engineer - up to $190,000</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -350,7 +350,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<h5><a href='https://olxbrasil.recruiterbox.com/jobs/fk033gc/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://olxbrasil.recruiterbox.com/jobs/fk033gc/'>
     Cientista de Dados (NLP) at OLX Brasil
 </a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
@@ -385,7 +385,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-08-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soundhoundintern/jobs/4404748002'>Job Application for Machine Learning Scientist Intern - Natural Language Processing at SoundHound Inc. Internship</a></h5> 
+<h5><a href='https://boards.greenhouse.io/soundhoundintern/jobs/4404748002'>Job Application for Machine Learning Scientist Intern - Natural Language Processing at SoundHound Inc. Internship</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-30</p>
 <hr/>
@@ -395,7 +395,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Numberly/743999693611842-stage-data-scientist-nlp'>Numberly Stage Data Scientist - NLP | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Numberly/743999693611842-stage-data-scientist-nlp'>Numberly Stage Data Scientist - NLP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-08-25</p>
 <hr/>
@@ -486,7 +486,7 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-08</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/drwfr/jobs/1796523'>Job Application for Scientifique de donn?es - NLP at DRW Montreal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/drwfr/jobs/1796523'>Job Application for Scientifique de donn?es - NLP at DRW Montreal</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-08-06</p>
 <hr/>
